Time: 1 ms (89.19%), Space: 44.4 MB (7.45%) - LeetHub